--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,18 +15,24 @@
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
     "daisyui": "^4.12.13",
-    "next": "14.2.14",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "15.1.4",
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.7",
+    "@types/react-dom": "19.0.3",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14"
+    "eslint-config-next": "15.1.4"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.0.7",
+      "@types/react-dom": "19.0.3"
+    }
   }
 }
