--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,20 +14,20 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.4",
     "@mui/material": "^6.1.4",
-    "daisyui": "^4.12.13",
+    "flyonui": "^1.3.0",
     "next": "15.1.4",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "eslint": "^8",
+    "eslint-config-next": "15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8",
-    "eslint-config-next": "15.1.4"
+    "typescript": "^5"
   },
   "pnpm": {
     "overrides": {
